--- a/package.json
+++ b/package.json
@@ -1,38 +1,51 @@
 {
   "name": "angular-testing",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --no-cache",
+    "prettier": "prettier --write 'src/**/*.{js,ts,html,md,less,json}'"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "@angular/animations": "16.1.0",
+    "@angular/common": "16.1.0",
+    "@angular/compiler": "16.1.0",
+    "@angular/core": "16.1.0",
+    "@angular/forms": "16.1.0",
+    "@angular/platform-browser": "16.1.0",
+    "@angular/platform-browser-dynamic": "16.1.0",
+    "@angular/router": "16.1.0",
+    "@ng-web-apis/common": "^3.0.1",
+    "@ng-web-apis/universal": "^3.0.2",
+    "@taiga-ui/cdk": "3.36.2",
+    "@taiga-ui/core": "3.36.2",
+    "@taiga-ui/icons": "3.36.2",
+    "@taiga-ui/kit": "3.36.2",
+    "@taiga-ui/styles": "3.36.2",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "dompurify": "2.2.9",
+    "rxjs": "7.8.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "~16.1.4",
-    "@angular/compiler-cli": "^16.1.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "@angular-devkit/build-angular": "16.1.4",
+    "@angular/cli": "16.1.4",
+    "@angular/compiler-cli": "16.1.0",
+    "@tinkoff/prettier-config": "1.52.1",
+    "@types/dompurify": "2.2.3",
+    "@types/jest": "29.5.3",
+    "autoprefixer": "10.4.14",
+    "jest": "29.6.1",
+    "jest-preset-angular": "13.1.1",
+    "ng-mocks": "14.11.0",
+    "postcss": "8.4.26",
+    "prettier": "2.6.2",
+    "tailwindcss": "3.3.3",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.3"
   }
 }
