feat: added mapper pipe; some refactoring

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "dom"
     ],
     "paths": {
-        "@modules/*": ["src/modules/*"]
+        "@modules/*": ["src/modules/*"],
+        "@utils/*": ["src/utils/*"]
     }
   },
   "angularCompilerOptions": {
